--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "7.2.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "nodemon": "^3.1.11",
-    "prisma": "^6.19.2"
+    "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.3",
+    "prisma": "^7.2.0"
   }
 }
