--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
