--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,15 +14,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@prisma/client": "7.2.0",
+    "@prisma/client": "~5.18.0",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "prisma": "~5.18.0"
   },
   "devDependencies": {
-    "dotenv": "^17.2.3",
-    "prisma": "^7.2.0"
+    "dotenv": "^17.2.3"
   }
 }
